# emoscript

./: Cargo.toml  Readme.md
src/: index.html  main.rs
